--- a/style.css
+++ b/style.css
@@ -68,3 +68,10 @@ ion-icon:hover {
         font-size: 1.5rem;
     }
 }
+
+.pics img {
+    width: 60%;
+    height: 60%;
+    border-radius: 20px;
+    box-shadow: 15px 30px 20px rgba(0, 0, 2, 0.5), 0 6px 6px rgba(0, 0, 0, 0.15);
+}
